objects/Sep_Demo__c.object
<CustomObject>
    <fields>
        <fullName>Digimarc_text__c</fullName>
        <label>Digimarc text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glassdoor__c</fullName>
        <label>Glassdoor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opentable_Text__c</fullName>
        <label>Opentable Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_ALM_Tool__c</fullName>
        <label>Type of ALM Tool</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Demo__c</fullName>
        <label>Type of Demo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_VCS__c</fullName>
        <label>Type of VCS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uber_text__c</fullName>
        <label>uber text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sep Demo</label>
    <nameField>
        <label>Sep Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sep Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>